--- a/css/master.css
+++ b/css/master.css
@@ -33,7 +33,7 @@ h2 {
 
 #fable01 {
   min-height: 60vh;
-  background: #3d265e url('images/wolf_and_the_kid.jpg') top center no-repeat;
+  background: #3d265e url('images/wolfandlamb_1.jpg') top center no-repeat;
   background-size: cover;
   background-attachment: fixed;
   overflow: hidden;
